--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,11 +1,15 @@
+/*********** IMPORTS ***********/
 @import url("navbar-color.css");
-
+/* Used to change all colors of navbar */
 @import url("../fonts/font-awesome-4.5.0/css/font-awesome.min.css");
+/* Used for not supported glyphicons */
 
 @font-face {
     font-family: Anonymous;
     src: url(../fonts/Anonymous_Pro.ttf);
 }
+
+/*********** BODY ***********/
 
 body {
     font-size: 16px;
@@ -16,6 +20,7 @@ body {
 }
 
 @media all and (max-width: 1200px) {
+    /* Responsive font */
     /* screen size until 1200px */
     body, .jumbotron a {
         font-size: 1.5em; /* 1.5x default size */
@@ -23,11 +28,14 @@ body {
 }
 
 @media all and (max-width: 1000px) {
+    /* Responsive font */
     /* screen size until 1000px */
     body, .jumbotron a, div p.white {
         font-size: 1.2em; /* 1.2x default size */
     }
 }
+
+/*********** HEADER ***********/
 
 .jumbotron {
     background-color: #234465;
@@ -51,7 +59,10 @@ body {
     color: #fff;
 }
 
+/*********** NAVBAR ***********/
+
 @media (min-width: 768px) {
+    /* Displays center navbar in center */
     .navbar .navbar-nav {
         display: inline-block;
         float: none;
@@ -62,18 +73,62 @@ body {
         text-align: center;
     }
 }
+
 nav {
     border-radius: 0 !important;
 }
-.menu-tweets{
+
+.menu-tweets {
     color: #fff;
     font-size: 1.8em;
     margin: 10px 10px 0 10px;
 }
-.menu-tweets:hover, .menu-tweets:focus{
+
+.menu-tweets:hover, .menu-tweets:focus {
     text-decoration: none;
     color: #ffa000;
 }
-#search{
 
+#search {
+
+}
+
+/*********** MAIN ***********/
+
+/*********** ASIDE ***********/
+.well>a>h3{
+    margin-bottom: 15px;
+}
+.img-bar {
+    max-width: 100%;
+}
+
+.aside-p {
+    margin-top: 1%;
+}
+
+.well .well:hover {
+    background-color: #e6e6e6;
+    border-color: #adadad;
+    color: #333;
+}
+
+.well .well > a:hover {
+    text-decoration: none;
+}
+
+.panel-heading p {
+    color: #234465;
+    font-size: 1.55em;
+    font-weight: bold;
+}
+
+.long-heading {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#main-section{
+    padding-right: 0;
+    padding-left: 0;
 }
