Format code. Adding effects to header. Adding links

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -15,10 +15,6 @@ body {
     font-size: 16px;
 }
 
-.jumbotron a {
-    font-size: 40px;
-}
-
 @media all and (max-width: 1200px) {
     /* Responsive font */
     /* screen size until 1200px */
@@ -45,6 +41,7 @@ body {
 }
 
 .jumbotron a {
+    font-size: 40px;
     letter-spacing: 5px;
     text-decoration: none;
     color: #ffa000;
@@ -53,6 +50,44 @@ body {
 
 #logo {
     width: 10%;
+}
+
+/* Pulse Grow */
+@-webkit-keyframes hvr-pulse-grow {
+  to {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+
+@keyframes hvr-pulse-grow {
+  to {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+
+.hvr-pulse-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+}
+.hvr-pulse-grow:hover, .hvr-pulse-grow:focus, .hvr-pulse-grow:active {
+  -webkit-animation-name: hvr-pulse-grow;
+  animation-name: hvr-pulse-grow;
+  -webkit-animation-duration: 0.3s;
+  animation-duration: 0.3s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
 }
 
 .white {
@@ -121,6 +156,14 @@ nav {
     color: #234465;
     font-size: 1.55em;
     font-weight: bold;
+}
+
+.panel-heading>a {
+    text-decoration: none;
+}
+
+.panel-heading>a p:hover {  
+    color: #ffa000;
 }
 
 .long-heading {
