--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -13,22 +13,31 @@
 
 body {
     font-size: 16px;
+    background-color: #ffa000;
 }
 
 @media all and (max-width: 1200px) {
     /* Responsive font */
     /* screen size until 1200px */
-    body, .jumbotron a {
-        font-size: 1.5em; /* 1.5x default size */
+.jumbotron a, #text-resize {
+        font-size: 1.3em; /* 1.5x default size */
     }
 }
 
 @media all and (max-width: 1000px) {
     /* Responsive font */
     /* screen size until 1000px */
-    body, .jumbotron a, div p.white {
+.jumbotron a, div p.white,.text-resize {
         font-size: 1.2em; /* 1.2x default size */
     }
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
 }
 
 /*********** HEADER ***********/
@@ -54,40 +63,41 @@ body {
 
 /* Pulse Grow */
 @-webkit-keyframes hvr-pulse-grow {
-  to {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
+    to {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
 }
 
 @keyframes hvr-pulse-grow {
-  to {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
+    to {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
 }
 
 .hvr-pulse-grow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
 }
+
 .hvr-pulse-grow:hover, .hvr-pulse-grow:focus, .hvr-pulse-grow:active {
-  -webkit-animation-name: hvr-pulse-grow;
-  animation-name: hvr-pulse-grow;
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+    -webkit-animation-name: hvr-pulse-grow;
+    animation-name: hvr-pulse-grow;
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
 }
 
 .white {
@@ -131,9 +141,10 @@ nav {
 /*********** MAIN ***********/
 
 /*********** ASIDE ***********/
-.well>a>h3{
+.well > a > h3 {
     margin-bottom: 15px;
 }
+
 .img-bar {
     max-width: 100%;
 }
@@ -142,14 +153,23 @@ nav {
     margin-top: 1%;
 }
 
-.well .well:hover {
+.well {
+    border: 1px solid #390b56;
+}
+
+.well > a, .well:hover {
     background-color: #e6e6e6;
     border-color: #adadad;
     color: #333;
+    text-decoration: none;
 }
 
-.well .well > a:hover {
-    text-decoration: none;
+.panel-default {
+    border: none;
+}
+
+.panel-default, .panel-heading {
+    border-radius: 15px;
 }
 
 .panel-heading p {
@@ -158,11 +178,11 @@ nav {
     font-weight: bold;
 }
 
-.panel-heading>a {
+.panel-heading > a {
     text-decoration: none;
 }
 
-.panel-heading>a p:hover {  
+.panel-heading > a p:hover {
     color: #ffa000;
 }
 
@@ -171,7 +191,43 @@ nav {
     padding-right: 5px;
 }
 
-#main-section{
+.panel-body {
+    background-color: #234465;
+}
+
+#main-section {
     padding-right: 0;
     padding-left: 0;
+}
+
+/************WINNERS!************/
+
+.winners-well {
+    background-color: #234465;
+}
+
+.panel-heading.winners-panel {
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #3c0e4c;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #dddddd;
+    border-radius: 0;
+}
+
+.panel-body.winners-panel {
+    background-color: white;
+    text-align: left;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.winners-img {
+    max-width: 100%;
+    margin: 5px;
+}
+
+.winners-text {
+    color: #3c0e4c;
 }
