--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -140,6 +140,11 @@ nav {
 
 /*********** MAIN ***********/
 
+#myCarousel {
+   width: 97%;
+}
+
+
 /*********** ASIDE ***********/
 .well > a > h3 {
     margin-bottom: 15px;
@@ -236,7 +241,7 @@ nav {
     color: #3c0e4c;
 }
 
-.winners-header{
+.winners-header {
     margin: 2% 5%;
     color: #234465;
     font-size: 20px;
