--- a/resources/css/wheel.css
+++ b/resources/css/wheel.css
@@ -1,16 +1,16 @@
 
 img{
     width:25%;
-}
-
-img{
-    -webkit-transition: all 1.3s ease-in-out;
+/*	margin: auto;
+	padding-left:25%;
+		-webkit-transition: all 1.3s ease-in-out;
     -moz-transition:    all 1.3s ease-in-out;
     -o-transition:      all 1.3s ease-in-out;
-    -ms-transition:     all 1.3s ease-in-out;
+    -ms-transition:     all 1.3s ease-in-out;*/
 }
-img:hover {
-    -webkit-transform: rotate(360deg) scale(1.3);
-    -moz-transform:    rotate(360deg) scale(1.3);
-    -o-transform:      rotate(360deg) scale(1.3);
-    -ms-transform:     rotate(360deg) scale(1.3
+a:active img {
+
+   -webkit-transform: rotate(1000deg) scale(1.1);
+   -webkit-transition: -webkit-transform 2s ease-out;
+
+}
